# OneBitBrowser

./: README.md
Avr-Arduino Code/: CMakeLists.txt  main.cpp
Avr-Arduino Code/basics/: Buffer.h
Avr-Arduino Code/mdns/: CMakeLists.txt
Avr-Arduino Code/stepperpolyhedron/: CMakeLists.txt  Stepper.h
Avr-ArduinoActuatorCode/basics/: String.h
Avr-ArduinoActuatorCode/mdns/: UdpSocket.cpp  UdpSocket.h  mDNSNameResolution.cpp  mDNSNameResolution.h
Avr-ArduinoActuatorCode/stepperpolyhedron/: Stepper.cpp
Avr-ArduinoPirSensorCode/: CMakeLists.txt  main.cpp
Nodejs Code/polyhedron/: demo.html  index.html  presenceServers.js  svgExample.xhtml  webserver.js
